<resources>
    <string name="app_name">MyApp</string>
    <string name="tv_title">Music App</string>

    <string name="sign_up">Don\'t have an account? Register</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter your password</string>
    <string name="btn_log_in">Sign in</string>
    <string name="btn_register">Register</string>
    <string name="hint_password_again">Re-enter your password</string>
    <string name="imgbtn_content">img</string>
    <string name="label_start_time">00:00</string>
    <string name="label_imgbutton">imgbutton</string>
    <string name="text_artist_name">Artist Name</string>
    <string name="text_song_name">Song Name</string>
    <string name="desc_image_avatar">Image Song</string>
    <string name="my_playlist">My Playlist</string>
    <string name="sign_out">Sign out</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="play_list">Playlists</string>
    <string name="popular_songs">Popular Songs</string>
    <string name="history_songs">History Songs</string>
    <string name="home">Home</string>
    <string name="hint_search">Search</string>
    <string name="btn_add">Add Playlist</string>
    <string name="hint_playlist_name">Enter playlist name</string>
    <string name="tv_playlist_name">Playlist Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_favorite">add_favorite</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="navigation_drawer_open">Open navigation menu</string>
    <string name="navigation_drawer_close">Close navigation menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_playlists">Playlist</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Sign out</string>
    <string name="search_hint">Search songs, artists...</string>
    <string name="search_empty_query">Please enter search keyword</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="error_network">Network connection error</string>
    <string name="error_unknown">An unknown error occurred</string>


    <string name="splash_title">Discover the world of music</string>
    <string name="splash_subtitle">Music for every emotion</string>
    <string name="create_account">Create account</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_email_username">Email or username</string>
    <string name="hint_password_confirm">Re-enter password</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="already_have_account">Already have an account? Sign in now</string>
    <string name="explore_music">Explore</string>
    <string name="favorite_songs_subtitle">Your most loved songs</string>
    <string name="no_favorite_songs">No favorite songs yet</string>
    <string name="add_favorite_songs_hint">Add your favorite songs</string>
    <string name="recent_songs_subtitle">Songs you listened to recently</string>
    <string name="today">Today</string>
    <string name="no_history">No listening history yet</string>
    <string name="play_any_song_hint">Play any song</string>
    <string name="no_playlists">No playlists yet</string>
    <string name="create_first_playlist_hint">Create your first playlist</string>
    <string name="empty_playlist">Empty playlist</string>
    <string name="add_songs_to_playlist_hint">Add songs to this playlist</string>
    <string name="no_songs_found">No songs found</string>
    <string name="try_different_keyword">Try different keyword or check connection</string>
    <string name="search_results_for">Search results for \"%s\"</string>
    <string name="all_songs_count">All songs (%d)</string>
    <string name="no_playlists_empty">No playlists available</string>
    <string name="create_first_playlist">Create your first playlist</string>


    <string name="edit_playlist_title">Edit Playlist Name</string>
    <string name="save">Save</string>
    <string name="create_playlist_title">Create New Playlist</string>
    <string name="create">Create</string>
    <string name="delete_playlist_title">Delete Playlist</string>
    <string name="delete_playlist_message">Are you sure you want to delete playlist \"%s\"?</string>
    <string name="delete_playlist_warning">This action cannot be undone</string>
    <string name="delete">Delete</string>
    <string name="add_to_playlist_title">Add to Playlist</string>
    <string name="confirm_delete_playlist">Are you sure you want to delete playlist \"%s\"?\n\nThis action cannot be undone.</string>


    <string name="error_load_favorites">Cannot load favorites list</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="error_remove_favorites">Cannot remove from favorites</string>
    <string name="error_load_songs">Cannot load songs list</string>
    <string name="error_load_history">Cannot load listening history</string>
    <string name="error_load_playlists">Cannot load playlists</string>
    <string name="error_remove_from_playlist">Cannot remove song from playlist</string>
    <string name="removed_from_playlist">Removed song from playlist</string>
    <string name="error_get_user_info">Cannot get user information</string>
    <string name="error_show_dialog">Cannot show dialog</string>
    <string name="enter_playlist_name">Please enter playlist name</string>
    <string name="playlist_deleted">Deleted playlist \"%s\"</string>
    <string name="error_delete_playlist">Cannot delete playlist</string>
    <string name="playlist_created_success">Playlist created successfully</string>
    <string name="error_create_playlist">Cannot create playlist</string>
    <string name="playlist_updated_success">Playlist updated successfully</string>
    <string name="error_update_playlist">Cannot update playlist</string>
    <string name="error_load_user_info">Cannot load user information</string>
    <string name="added_to_playlist">Added to playlist \"%s\"</string>
    <string name="error_add_to_playlist">Cannot add song to playlist</string>
    <string name="created_recently">Created recently</string>
    <string name="created_on">Created %s</string>


    <string name="email_password_required">Email and password cannot be empty</string>
    <string name="login_failed">Login failed</string>
    <string name="signup_success">Sign up successful</string>
    <string name="invalid_request">Invalid request</string>
    <string name="username_exists">Username already exists</string>
    <string name="unknown_error_code">Unknown error: %d</string>
    <string name="server_connection_error">Server or connection error</string>
    <string name="fill_all_fields">Please fill in all information</string>
    <string name="passwords_not_match">Passwords do not match</string>


    <string name="no_song_playing">No song playing</string>
    <string name="cannot_play_music">Cannot play music</string>
    <string name="playback_error">Error playing music</string>
    <string name="removed_from_favorites_success">Removed from favorites</string>
    <string name="added_to_favorites_success">Added to favorites</string>
    <string name="error_update_favorites">Cannot update favorites</string>


    <string name="time_just_now">Just now</string>
    <string name="time_minutes_ago">%d minutes ago</string>
    <string name="time_hours_ago">%d hours ago</string>
    <string name="time_yesterday">Yesterday</string>
    <string name="time_days_ago">%d days ago</string>


    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout_confirm">Logout</string>


    <string name="about_title">About</string>
    <string name="about_message">Music App v1.0\n\nMusic app with many attractive features:\n• Rich music library\n• Personal playlists\n• Music playback history\n• Favorite songs</string>


    <string name="feature_coming_soon">%s feature coming soon</string>
    <string name="default_user_name">Music Lover</string>
    <string name="default_user_email">user@example.com</string>


    <string name="explore_music_title">Explore Music</string>
    <string name="favorites_title">Favorites</string>
    <string name="history_title">History</string>
    <string name="search_results_title">Search Results</string>
    <string name="search_for">Search: \"%s\"</string>


    <string name="created_date">Created %s</string>
    <string name="search_results_for_example">Search results for \'pop music\'</string>
</resources>