<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_songs"
            android:checked="true"
            android:icon="@drawable/ic_home_apple"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_heart_apple"
            android:title="@string/menu_favorites" />

        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_playlist_apple"
            android:title="Playlist" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_apple"
            android:title="@string/menu_history" />

    </group>

    <group
        android:id="@+id/group_other"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_apple"
            android:title="@string/menu_logout" />

    </group>

</menu>